--- a/GatosNegrosMalaSuerte.html
+++ b/GatosNegrosMalaSuerte.html
@@ -98,9 +98,9 @@
          <section id="agregarComentarios" class="agregarComentarios nuevosComentColor">
              <p>Agregar comentarios</p>
           <input class="inputNombreComent inputComent" type="text" placeholder="Escribe tu nombre" size="40">
-          <input class="inputComentComent inputComent" type="text" placeholder="Escribe tu comentario..." size="130">
+          <input class="inputComentComent inputComent" type="text" placeholder="Escribe tu comentario..." size="90">
           <br>
-          <button class="buttonPublicarComent buttonComent" onclick="publicarArt()">Publicar</button>
+          <button class="buttonPublicarComent buttonComent" onclick="publicarComent()">Publicar</button>
          </section>
     </section>
 </section>
