--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,7 @@
         <section id="sectionArt" class="sectionArt">
 
             <section id="sectionArt" class="sectionArt">
-                <div id="contenedorArticulos">
+                <div id="contenedorArticulos" class="contenedorArticulos">
                 </div>
             </section>
         
