--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                   <p class="card-text">10 min de lectura - compartir</p>
 
-                  <a href="#" class="btn botonCard">Leer más...</a>
+                  <a href="./GatosNegrosMalaSuerte.html" class="btn botonCard">Leer más...</a>
                 </div>
               </div>
               <div class="card" style="width: 25rem;">
@@ -124,7 +124,7 @@
                          expresan en forma muy particular. Hoy, queremos compartir con ustedes algunos datos muy curiosos sobre los gatos.</p>
   
                     <p class="card-text">10 min de lectura - compartir</p>
-                  <a href="#" class="btn botonCard">Leer más...</a>
+                  <a href="./GatosNegrosMalaSuerte.html" class="btn botonCard">Leer más...</a>
                 </div>
               </div>
               <div class="card" style="width: 25rem;">
@@ -136,7 +136,7 @@
                          expresan en forma muy particular. Hoy, queremos compartir con ustedes algunos datos muy curiosos sobre los gatos.</p>
   
                     <p class="card-text">10 min de lectura - compartir</p>
-                  <a href="#" class="btn botonCard">Leer más...</a>
+                  <a href="./GatosNegrosMalaSuerte.html" class="btn botonCard">Leer más...</a>
                 </div>
               </div>
               <div class="card" style="width: 25rem;">
@@ -148,7 +148,7 @@
                          expresan en forma muy particular. Hoy, queremos compartir con ustedes algunos datos muy curiosos sobre los gatos.</p>
   
                     <p class="card-text">10 min de lectura - compartir</p>
-                  <a href="#" class="btn botonCard">Leer más...</a>
+                  <a href="./GatosNegrosMalaSuerte.html" class="btn botonCard">Leer más...</a>
                 </div>
               </div>
 
@@ -201,7 +201,7 @@
         <p id="textoFooter" class="textoFooter">El gato negro © Copyright 2021, Todos los derechos reservados</p>
         </section>
     </footer>
-
+        <script src="/javascript/json.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
