--- a/contacto.html
+++ b/contacto.html
@@ -44,6 +44,10 @@
                             <li class="nav-item">
                                 <a class="menu" href="./contacto.html">Contacto</a>
                             </li>
+                        </li>
+                        <li class="nav-item">
+                           <a href="favoritos.html"><img class="favoritos-item" src="./imagenes/corazon_favoritos.png" alt="favoritos"></a>
+                        </li>
                         </ul>
                       </div>
                     </div>
