--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="menu" href="./contacto.html">Contacto</a>
                         </li>
+                        <li class="nav-item">
+                           <a href="favoritos.html"><img class="favoritos-item" src="./imagenes/corazon_favoritos.png" alt="favoritos"></a>
+                        </li>
                     </ul>
                   </div>
                 </div>
@@ -201,7 +204,7 @@
         <p id="textoFooter" class="textoFooter">El gato negro © Copyright 2021, Todos los derechos reservados</p>
         </section>
     </footer>
-        <script src="/javascript/json.js"></script>
+        <script src="./javascript/fetch.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
