--- a/favoritos.html
+++ b/favoritos.html
@@ -97,6 +97,6 @@
         <p id="textoFooter" class="textoFooter">El gato negro © Copyright 2021, Todos los derechos reservados</p>
         </section>
     </footer>
-
+     <script src="./javascript/widgets.js"></script>
 </body>
 </html>
